--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,9 @@ body{
 .whereToGoRight p { 
     line-height: 2rem;
 }
+.whereToGoTxt { 
+    width: 95%;
+}
 
 .TourSelectBtn1 { 
     min-width: 200px;
@@ -491,6 +494,12 @@ body{
     }
     .whereToGoRight { 
         padding-right: 10px;
+    }
+    .whereToGoTxt { 
+        width: 75%;
+        margin: auto;
+        justify-content: center;
+        margin-bottom: 30px;
     }
     .testimonials { 
         max-width: 70%;
